# memory-agent-eval-kit

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter_guide.md  adapters.md  architecture.md  benchmark_design.md  benchmark_methodology.md  benchmark_statistics.md  contributing_scenarios.md  coverage_matrix.md  metrics.md  scenario_authoring.md
examples/: simple_memory_agent.py
leaderboards/: results.json  results.md
memory_agent_eval_kit/: cli.py  models.py
memory_agent_eval_kit/adapters/: __init__.py  base.py  file_backed.py  langgraph.py  mem0.py  session.py  simple.py  templates.py
memory_agent_eval_kit/benchmarks/: __init__.py  config.py  plugins.py  profiling.py  registry.py  runner.py  scale.py  stress.py
memory_agent_eval_kit/datasets/: __init__.py  benchmark_scenarios.json  changelog.py  loader.py  validation.py  versions.py
memory_agent_eval_kit/evaluators/: __init__.py  adversarial_contradiction.py  agent_disagreement.py  base.py  collaborative_memory.py  conflict_resolution.py  continuity.py  contradiction.py  correction.py  forgetting.py  gdpr_forgetting.py  hallucinated_recall.py  hallucination.py  hierarchical_memory.py  long_horizon.py  memory_drift.py  memory_leakage.py  memory_synchronization.py  noisy_memory.py  pii_deletion.py  poisoning.py  (+11 more)
notebooks/: benchmark_quickstart.ipynb
reports/: comparison_dashboard.json  comparison_dashboard.md  reproducibility.md  results.csv  results.json  results.md
submissions/: README.md
tests/: test_core.py
(+37 files in other folders)
