[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-agent-eval-kit"
version = "0.2.0"
description = "Benchmark and evaluation framework for memory-enabled AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Memory Agent Eval Kit Contributors"}]
keywords = ["ai", "agents", "memory", "evaluation", "benchmarks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.scripts]
memory-eval = "memory_agent_eval_kit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.8", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["memory_agent_eval_kit*"]

[tool.setuptools.package-data]
memory_agent_eval_kit = ["py.typed", "datasets/*.json"]

[tool.pytest.ini_options]
addopts = "--cov=memory_agent_eval_kit --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["memory_agent_eval_kit"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
